add matrix class

--- a/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj
+++ b/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="Define.h" />
     <ClInclude Include="Drawing.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="Matrix.h" />
     <ClInclude Include="RGB.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="VirtualScreen.h" />
