--- a/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj.filters
+++ b/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Util.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Matrix.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
