--- a/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj.filters
+++ b/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Matrix.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Point.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
