Done Lab3 - Add Timer

--- a/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj.filters
+++ b/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="Point.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
