--- a/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj
+++ b/2D_layer_shape_drawing/2D_layer_shape_drawing.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="RGB.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="VirtualScreen.h" />
   </ItemGroup>
